build_error_rerank_3.log
    Checking code-rag v0.1.0 (I:\01-Master_Code\Test-Labs\code-rag)
warning: unused import: `ListArray`
 --> src\storage.rs:2:124
  |
2 | use arrow_array::{RecordBatch, RecordBatchIterator, StringArray, Float32Array, Int32Array, Int64Array, FixedSizeListArray, ListArray};
  |                                                                                                                            ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `RecordBatch`
 --> src\search.rs:7:19
  |
7 | use arrow_array::{RecordBatch, StringArray, Float32Array, Int32Array, ListArray, Array};
  |                   ^^^^^^^^^^^

error[E0596]: cannot borrow `*reranker` as mutable, as it is behind a `&` reference
  --> src\embedding.rs:39:27
   |
39 |             let results = reranker.rerank(query, &refs, true, None)?; 
   |                           ^^^^^^^^ `reranker` is a `&` reference, so the data it refers to cannot be borrowed as mutable

For more information about this error, try `rustc --explain E0596`.
warning: `code-rag` (lib) generated 2 warnings
error: could not compile `code-rag` (lib) due to 1 previous error; 2 warnings emitted
